@@ -219,6 +219,8 @@ If upgrading from an older release, see the file UPGRADING.
 * (bug 288) Fix tabs wrapping in IE6
 * (bug 119) Fix full-width tabs with RTL text in IE
 * (bug 1323) Fix logo rendering off-screen in IE with RTL language
+* Show "block" link in Special:Recentchanges for logged in users, too, if
+  wgUserSysopBans is true.
 
 === Caveats ===
 
